--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 		  
           <div class="mastfoot">
             <div class="inner">
-              <p>Follow the winning on <a href="https://www.facebook.com/Make-Ohio-State-Great-Again-1700387470246778/">Facebook</a> and <a href="https://twitter.com/makeosugr8again">Twitter</a>.</p>
+              <p>Follow the winning on <a href="http://on.fb.me/1LyiYbZ">Facebook</a> and <a href="http://bit.ly/1Y2jsce">Twitter</a>.</p>
             </div>
           </div>
 
